# qran

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/: mushaf.py
src/qran/: mushaf_simple.json
src/qrn/: __init__.py  __main__.py  models.py  mushaf.py  mushaf_uthmani.json  util.py
tests/: test_qrn.py
