[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrn"
version = "0.1.0"
readme = "README.md"
dependencies = [
  "orjson",
  "pydantic",
]
requires-python = ">=3.8"
authors = [
  {name = "Alicia Gonzalez Martinez", email = "aliciagm85+github@gmail.com"},
]
maintainers = [
  {name = "Alicia Gonzalez Martinez", email = "aliciagm85+github@gmail.com"},
]
description = "Quran structured text API"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[project.scripts]
qrn = "qrn.__main__:main"

[tool.setuptools.package-data]
qrn = ["mushaf_simple.json", "mushaf_uthmani.json", "mushaf_dt.json"]  #FIXME dt must be private

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    # "pytest-cov>=3.0.0",
    # "pytest-mock>=3.0.0",
    "ruff>=0.11.0",             # Linting
    # "black>=23.0.0",           # Code formatting (optional)
    # "mypy>=1.0.0",             # Type checking (optional)
    # "ipython>=8.0.0",          # Interactive debugging (optional)
    # "build>=0.10.0",           # Building packages (optional)
]

# [tool.ruff]
# line-length = 115
# target-version = "py39"

# [tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]

# [tool.mypy]
# ignore_missing_imports = true
# no_site_packages = true
# check_untyped_defs = true